--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <!--
+* Docker Discovery Dashboard
+* @version v0.0.1
+* @link https://github.com/ezand/docker-discovery
+* Copyright (c) 2020 Eirik Stenersen Sand
+* License MIT
+-->
+<!--
 * CoreUI Free - React.js Admin Template
 * @version v3.2.0
 * @link https://coreui.io/pro/react/
@@ -11,10 +18,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="CoreUI for React - Open Source Bootstrap Admin Template">
-    <meta name="author" content="Łukasz Holeczek">
-    <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
-    <title>CoreUI Free React.js Admin Template</title>
+    <meta name="description" content="Dashboard for Docker Discovery">
+    <meta name="author" content="Eirik Stenersen Sand">
+    <meta name="keyword" content="Admin,Dashboard,Docker,MQTT,WebSockets,HomeAssistant,HASS,hass.io">
+    <title>Docker Discovery Dashboard</title>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
